--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
   <title>Sunny 花店</title>
@@ -8,46 +8,46 @@
 <body>
   <header class="site-header">
     <h1>Sunny 花店</h1>
-    <p>用花传递温暖</p>
+    <p>用花傳遞溫暖</p>
   </header>
   <main>
     <section id="intro">
-      <h2>欢迎来到我们的花店</h2>
-      <p>我们提供各种新鲜花卉与花束，满足您不同的送礼需求。</p>
+      <h2>歡迎來到我們的花店</h2>
+      <p>我們提供各種新鮮花卉與花束，滿足您不同的送禮需求。</p>
     </section>
     <section id="products">
-      <h2>热销商品</h2>
+      <h2>熱銷商品</h2>
       <div class="product-list">
         <div class="product">
           <img src="https://via.placeholder.com/150" alt="玫瑰" />
-          <h3>红玫瑰</h3>
+          <h3>紅玫瑰</h3>
           <p class="price">$20</p>
-          <button class="add-to-cart">加入购物车</button>
+          <button class="add-to-cart">加入購物車</button>
         </div>
         <div class="product">
           <img src="https://via.placeholder.com/150" alt="百合" />
           <h3>百合花束</h3>
           <p class="price">$30</p>
-          <button class="add-to-cart">加入购物车</button>
+          <button class="add-to-cart">加入購物車</button>
         </div>
         <div class="product">
-          <img src="https://via.placeholder.com/150" alt="郁金香" />
-          <h3>郁金香</h3>
+          <img src="https://via.placeholder.com/150" alt="鬱金香" />
+          <h3>鬱金香</h3>
           <p class="price">$25</p>
-          <button class="add-to-cart">加入购物车</button>
+          <button class="add-to-cart">加入購物車</button>
         </div>
       </div>
     </section>
     <section id="contact">
-      <h2>联系我们</h2>
+      <h2>聯絡我們</h2>
       <form id="contact-form">
         <label for="name">姓名</label>
         <input type="text" id="name" name="name" required />
-        <label for="email">邮箱</label>
+        <label for="email">電子郵件</label>
         <input type="email" id="email" name="email" required />
         <label for="message">留言</label>
         <textarea id="message" name="message" required></textarea>
-        <button type="submit">发送</button>
+        <button type="submit">送出</button>
       </form>
     </section>
   </main>
